--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "NODE_ENV=$VERCEL_ENV npx knex migrate:latest",
-    "migrate": "NODE_ENV=$VERCEL_ENV npx knex migrate:latest",
-    "migrate:rollback": "NODE_ENV=$VERCEL_ENV npx knex migrate:rollback"
+    "postinstall": "npx knex migrate:latest",
+    "migrate": "npx knex migrate:latest",
+    "migrate:rollback": "npx knex migrate:rollback"
   },
   "repository": {
     "type": "git",
